# keeper_factory

./: .gitignore  README.md  config.example.json  pyproject.toml
doc/: MVP.0.1-base-zh-cn.md  MVP.0.1-base.md  MVP.0.1-phase1-goldenset-zh-cn.md  MVP.0.1-phase1-goldenset.md  MVP.0.1-phase1-judge-spec-zh-cn.md  MVP.0.1-phase1-judge-spec.md  MVP.0.1-phase1-ledger-zh-cn.md  MVP.0.1-phase1-ledger.md  MVP.0.1-phase1-loop-zh-cn.md  MVP.0.1-phase1-loop.md  MVP.0.1-phase1-memory-zh-cn.md  MVP.0.1-phase1-memory.md  MVP.0.1-phase2-checkpoint-zh-cn.md  MVP.0.1-phase2-checkpoint.md  MVP.0.1-phase2-config-zh-cn.md  MVP.0.1-phase2-config.md  MVP.0.1-phase2-deploy-zh-cn.md  MVP.0.1-phase2-deploy.md  MVP.0.1-phase2-mail-zh-cn.md  MVP.0.1-phase2-mail.md  MVP.0.1-phase2-model-layer-zh-cn.md  MVP.0.1-phase2-model-layer.md  MVP.0.1-phase2-stack-zh-cn.md  MVP.0.1-phase2-stack.md
prompts/: j1_edit_prompt.jinja  p0_prelabel_scene.jinja  p0_prelabel_target_card.jinja  p1_initial.jinja  p3_eval_pairwise.jinja  p3_eval_quality.jinja  p3_eval_redline.jinja  p4_refine.jinja  p4_synthesis.jinja  t0.txt
src/keeper_factory/: __init__.py  cli.py  config.py  healthcheck.py  init_data.py  oss.py
src/keeper_factory/goldenset/: __init__.py  loader.py
src/keeper_factory/ledger/: p1.py  (+3 more)
tests/: test_artifacts_report_mail.py  test_config.py  test_e2e_dry_run.py  test_edit_prompt.py  test_goldenset_demo_filter.py  test_healthcheck.py  test_init.py  test_judge.py  test_ledger_memory.py  test_loop.py  test_loop_improvements.py  test_model_layer.py  test_preprocess_tool.py
tools/: preprocess_goldenset.py
(+47 files in other folders)
