[project]
name = "keeper-factory"
version = "0.1.0"
description = "Keeper Factory MVP — self-evolving image-editing judgment lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "openai>=1.60",
    "httpx>=0.28",
    "requests>=2.32",
    "jinja2>=3.1",
    "ruamel.yaml>=0.18",
    "oss2>=2.19",
    "typer>=0.15",
    "loguru>=0.7",
    "pillow>=11.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kf = "keeper_factory.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keeper_factory"]

[tool.hatch.build.targets.wheel.force-include]
"src/keeper_factory" = "keeper_factory"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
